# online-drive-rs

./: Cargo.toml  config.toml
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: config.rs  context.rs  handler.rs  lib.rs
common/src/module/: commit.rs  error.rs  file.rs  item.rs  mod.rs  share.rs  user.rs
common/src/util/: database.rs  hash.rs  jwt.rs  minio.rs  mod.rs  nacos.rs  path.rs  result.rs  router.rs
services/commit-service/: Cargo.toml
services/commit-service/src/: handler.rs  main.rs  router.rs
services/commit-service/src/service/: commit_service.rs  mod.rs
services/file-service/: Cargo.toml
services/file-service/src/: handler.rs  main.rs  router.rs
services/file-service/src/service/: file_service.rs
services/share-service/: Cargo.toml
services/share-service/src/: handler.rs  main.rs  router.rs
services/share-service/src/service/: mod.rs  share_service.rs
services/user-service/: Cargo.toml
services/user-service/src/: handler.rs  main.rs  router.rs
services/user-service/src/service/: user_service.rs
