[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
salvo = {workspace = true}
tokio = {workspace = true}
tracing-subscriber = {workspace = true}
rbatis = {workspace = true}


uuid = {workspace = true}
aws-sdk-s3 = {workspace = true}
argon2 = {workspace = true}
serde = {workspace = true}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = {workspace = true}

